--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
-                                <a href="https://www.instagram.com/submisiroom/"
+                                <a href="https://www.instagram.com/submisiroom/" target="_blank"
                                     class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                             </li>
                         </ul>
@@ -52,15 +52,11 @@
                     <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
                     <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Bunuhlah rasa penasaran, itu pesan
                         terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot, sayang kini telah tiada.
-                        Sedih? Tentu tidak. Justru aku puas karena akhirnya aku bisa menghabisinya. Aku sudah bosan
-                        dengannya. Aku sadar dia bisa digantikan dengan yang lebih baik, tentu bukan dengan merk bulpen
+                        Sedih? Tentu tidak. Justru aku puas karena akhirnya aku sendiri yang menghabisinya. Aku baru sadar bahwa pilot bisa digantikan dengan yang lebih baik, tentu bukan dengan merk pena
                         selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
                         isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
-                        bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pilot ada
-                        benarnya. Baik, kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan.
-                        Salam dan
-                        terimakasih.
-                    </p>
+                        bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pena yang sudah kuanggap jadi sahabatku ada benarnya, terimakasih pilot. Baik, itu saja basa-basinya, intinya selamat berkunjung. Semoga harimu menyenangkan.
+                     </p>
                 </div>
             </div>
         </div>
@@ -76,9 +72,9 @@
                             Memorandom</h1>
                     </a>
                     <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan kaya makna dan
-                        inspirasi sudah dipastikan ada di blog lain, bukan disini. Disini hanya gudang ketikan anak
-                        kemarin sore. Tapi jika memang tertarik, membaca tulisan disini tak ada salahnya. Akan ada
-                        banyak hal yang mungkin baru disadari setelah baca tulisan disini, salah satunya buang-buang
+                        inspirasi sudah dipastikan ada di blog lain, bukan disini. Disini hanyalah gudang ketikan anak
+                        kemarin sore. Tapi jika memang tertarik, membaca tulisan disini tak ada salahnya. Pasti akan ada
+                        banyak hal yang baru disadari setelah baca tulisan disini, salah satunya buang-buang
                         waktu. Menariknya, semua tulisan dibuat dengan rasa gelisah meski nyatanya sedang gembira.
                         Saking gembiranya, alhasil semua tulisan lahir dengan bebas tanpa peduli aturan penulisan yang
                         berlaku. Ingat dan jangan salah, ini Memorandom, bukan Memorandum.
@@ -108,14 +104,14 @@
                     <div class="ha">
                         <div class="img-slider">
                             <div class="slide active">
-                                <a href=""><img src="dist/img/submisiroom.png" alt=""></a>
+                                <a href="https://www.instagram.com/submisiroom/" target="_blank"><img src="dist/img/submisiroom.png" alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/paint.jpg"
+                                <a href="https://www.instagram.com/p/CmtfTX-PA9v/" target="_blank"><img src="dist/img/paint.jpg"
                                         alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisiig.svg"
+                                <a href="https://www.instagram.com/submisiroom/" target="_blank"><img src="dist/img/submisiig.svg"
                                         alt=""></a>
                             </div>
                             <div class="navigation">
@@ -134,14 +130,14 @@
                                 Submisi</h2>
                         </a>
                         <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung
-                            tempat
-                            ini serbaguna, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada
+                            tempat seperti
+                            ini bisa multifungsi, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada
                             bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi
                             syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi.
                             Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini
-                            aku buat selain tulisan. Ini yang lebih masuk akal, siapa tahu ada mengerutkan dahi.
+                            aku buat atau orang lain buat bersamaku. Ini yang lebih masuk akal, siapa tahu ada mengerutkan dahi.
                             Akhirnya aku setuju. Jadi, ya jadi.</p>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
@@ -186,7 +182,7 @@
                     </div>
                     <div class="alert bg-neutral-200 bg-opacity-80 rounded-full px-8 py-3 lg:py-1 font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
                         role="alert">
-                        Sudah terkirim, terimakasih sudah berkunjung kesini
+                        Sudah terkirim, terimakasih sudah berkunjung
                         <button type="button" class="silang text-4xl ml-auto text-sec mb-2">×
                         </button>
                     </div>
@@ -224,7 +220,7 @@
                             d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
                     </svg>
                 </a>
-                <a href="https://www.youtube.com/@azkannawal/" target="_blank" class="text-zinc-50">
+                <a href="https://youtube.com/@azkannawal/" target="_blank" class="text-zinc-50">
                     <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
                         <title>YouTube</title>
@@ -360,4 +356,3 @@
 </body>
 
 </html>
-<!-- npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch -->
