--- a/dec.html
+++ b/dec.html
@@ -30,7 +30,7 @@
                                     class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
-                                <a href="https://www.instagram.com/submisiroom/"
+                                <a href="https://www.instagram.com/submisiroom/" target="_blank"
                                     class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                             </li>
                         </ul>
@@ -43,7 +43,7 @@
     <div class="pt-24 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-72">
             <h1 class=" text-3xl font-bold lg:text-4xl text-prim">Alternatif</h1>
-            <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 26, 2022 <span
+            <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 28, 2022 <span
                     class="ml-1 bg-amber-200 px-2 rounded-full text-xs">3 min read</span></h4>
             <div class="text-sec">
                 <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh
@@ -55,31 +55,35 @@
                 <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak
                     pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun
                     yang mengalami akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak
-                    pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
+                    pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan stop curhat di
+                    semua akun yang kupunya.</p>
                 <p class="mt-3 leading-relaxed">Aku berpikir maka aku bodoh. Semenjak sadar dari ketindihan, aku sama
                     sekali tidak ingin pintar. Menjadi orang pintar hanya akan membuat orang datang dan beli bulu
                     perindu kepadaku. Belum lagi menjadi pintar bisa membuatku merasa sombong dan kosong. Kalau misal
-                    harus pintar, aku hanya ingin sedikit. Bagiku sedikit pintar membuat semua ambisi tereksekusi, bukan
-                    sekadar rencana.</p>
+                    harus pintar, aku hanya ingin sedikit. Bagiku sedikit pintar membuat semua rencana tereksekusi,
+                    bukan
+                    sekadar ambisi.</p>
                 <img src="dist/img/seram.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
                 <p class="mt-3 leading-relaxed">Aku tidak tahu apa yang terjadi kedepannya. Aku pun juga tidak tahu hal
                     benar apa yang harus dilakukan remaja seusiaku. Yang kutahu hanyalah terus bergerak di hal yang
-                    mungkin kusuka dan jangan terlalu sering main gim. Tak terasa pula akan ganti tahun dan resolusiku
+                    mungkin kusuka dan tidak sering bermain gim. Tak terasa pula tahun akan berganti dan resolusiku
                     di tahun ini belum nampak hasilnya. Tahun depan aku putuskan tak memiliki resolusi apapun, toh
                     kamera hpku sudah memilikinya.</p>
                 <img src="dist/img/happy.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
                 <p class="mt-3 leading-relaxed">Bagiku berbicara lebih sulit daripada menulis. Menulis lebih sulit
-                    daripada membaca. Membaca lebih baik daripada main slot atau all in tim bola favorit. Begitu isi
+                    daripada membaca. Membaca lebih bagus daripada main slot atau all in tim bola. Begitu isi
                     kepalaku penuh pikiran dan kotoran, aku ingin sekali mengeluarkannya. Kapan hari aku sempat
                     berencana untuk menjadi youtuber dan membungkus pikiranku di dalam konten video. Tapi berhubung
-                    skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini.</p>
-                <p class="mt-3 leading-relaxed">Singkat cerita aku ingin mencoba membuat video di tiktok. Tapi hanya
-                    berisi quote dengan video random plus lagu, sebab banyak orang yang repost video seperti ini.
-                    Sayang, takdir tak merestui. Pada akhirnya semua opsi gagal dan mulai kucoba dari sini. Menulis
-                    semua omong kosong ini. Catatan cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa
-                    adanya demi mengosongkan sedikit ruang di kepala. </p>
-                <a href="https://www.youtube.com/watch?v=StqioKCPqF8"><img
-                        src="dist/img/smile.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
+                    skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini. Lebih baik
+                    aku jadi streamer gaming karena akan banyak orang yang menghabiskan waktunya demi menontonku.</p>
+                <p class="mt-3 leading-relaxed">Singkat cerita aku ingin mencoba membuat konten di tiktok. Bukan
+                    dengan berjoget, aku masih punya malu. Aku hanya ingin membuat video berisi teks dengan video
+                    random plus lagu, tak peduli sumbernya kudapat darimana, yang terpenting banyak orang yang akan
+                    repost kontenku. Sayangnya itu hanya keinginan dan takdir berkata lain. Pada
+                    akhirnya semua opsi gagal dan kini kucoba lagi dari sini. Menulis semua omong kosong ini. Catatan
+                    cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa adanya demi mengosongkan sedikit ruang di kepala.</p>
+                <a href="https://www.youtube.com/watch?v=StqioKCPqF8" target="_blank"><img src="dist/img/smile.svg"
+                        alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
         </div>
     </div>
