--- a/memorandom.html
+++ b/memorandom.html
@@ -31,7 +31,7 @@
                                         class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                                 </li>
                                 <li class="group">
-                                    <a href="https://www.instagram.com/submisiroom/"
+                                    <a href="https://www.instagram.com/submisiroom/" target="_blank"
                                         class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                                 </li>
                             </ul>
@@ -52,7 +52,7 @@
                         <a href="./dec">
                             <img src="/dist/img/pintu.jpg" class="rounded shadow-md" alt="">
                             <h3 class="text-center mt-3 text-lg font-semibold text-prim">Alternatif</h3>
-                            <p class="text-prim text-center mt-2 text-sm ">December 26, 2022 <span
+                            <p class="text-prim text-center mt-2 text-sm ">December 28, 2022 <span
                                     class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
                         </a>
                     </div>
