--- a/dec.html
+++ b/dec.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <title>Alternatif</title>
     <link rel="stylesheet" href="dist/decout.css">
 </head>
-
 <body>
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
@@ -38,9 +36,7 @@
                 </div>
             </div>
         </div>
-    </header>
-
-    <div class="pt-24 pb-16 bg-zinc-50">
+    </header><div class="pt-24 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-72">
             <h1 class=" text-3xl font-bold lg:text-4xl text-prim">Alternatif</h1>
             <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 28, 2022 <span
@@ -81,14 +77,13 @@
                     random plus lagu, tak peduli sumbernya kudapat darimana, yang terpenting banyak orang yang akan
                     repost kontenku. Sayangnya itu hanya keinginan dan takdir berkata lain. Pada
                     akhirnya semua opsi gagal dan kini kucoba lagi dari sini. Menulis semua omong kosong ini. Catatan
-                    cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa adanya demi mengosongkan sedikit ruang di kepala.</p>
+                    cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa adanya demi mengosongkan sedikit
+                    ruang di kepala.</p>
                 <a href="https://www.youtube.com/watch?v=StqioKCPqF8" target="_blank"><img src="dist/img/smile.svg"
                         alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
         </div>
-    </div>
-
-    <section id="komentar" class="pt-28 lg:pt-48 pb-16 bg-zinc-50">
+    </div><section id="komentar" class="pt-28 lg:pt-48 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="box mx-auto mb-8 lg:w-2/3">
@@ -132,9 +127,7 @@
             </form>
         </div>
         </div>
-    </section>
-
-    <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
+    </section><footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
         <div class="container mx-auto ">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
@@ -175,7 +168,6 @@
             <h4 class="text-xs pt-3 text-center text-zinc-50">©2022 Azkan Nawal</h4>
         </div>
     </footer>
-
     <script src="dist/js/script.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwMisJ72YmKCMw9SVdnWsB5s9rXC5U_6m6dD9p7ke1gF2kaosSXJ7Ax88c9xJHoA6JIAg/exec'
