--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en ">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +7,6 @@
     <title>Azkan Nawal</title>
     <link href="dist/output.css" rel="stylesheet" />
 </head>
-
 <body>
     <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
@@ -38,9 +36,7 @@
                 </div>
             </div>
         </div>
-    </header>
-
-    <section id="home" class="pt-28 pb-16 bg-zinc-50">
+    </header><section id="home" class="pt-28 pb-16 bg-zinc-50">
         <div class="container px-7 mx-auto lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/3">
@@ -52,17 +48,18 @@
                     <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
                     <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Bunuhlah rasa penasaran, itu pesan
                         terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot, sayang kini telah tiada.
-                        Sedih? Tentu tidak. Justru aku puas karena akhirnya aku sendiri yang menghabisinya. Aku baru sadar bahwa pilot bisa digantikan dengan yang lebih baik, tentu bukan dengan merk pena
+                        Sedih? Tentu tidak. Justru aku puas karena akhirnya aku sendiri yang menghabisinya. Aku baru
+                        sadar bahwa pilot bisa digantikan dengan yang lebih baik, tentu bukan dengan merk pena
                         selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
                         isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
-                        bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pena yang sudah kuanggap jadi sahabatku ada benarnya, terimakasih pilot. Baik, itu saja basa-basinya, intinya selamat berkunjung. Semoga harimu menyenangkan.
-                     </p>
+                        bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pena yang
+                        sudah kuanggap jadi sahabatku ada benarnya, terimakasih pilot. Baik, itu saja basa-basinya,
+                        intinya selamat berkunjung. Semoga harimu menyenangkan.
+                    </p>
                 </div>
             </div>
         </div>
-    </section>
-
-    <section id="memorandom" class="pt-36 pb-16 bg-neutral-100">
+    </section><section id="memorandom" class="pt-36 pb-16 bg-neutral-100">
         <div class="container px-7 mx-auto my:auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/2">
@@ -90,9 +87,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section id="submisi" class="pt-36 pb-16 bg-neutral-100 ">
+    </section><section id="submisi" class="pt-36 pb-16 bg-neutral-100 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-2/5">
@@ -104,15 +99,16 @@
                     <div class="ha">
                         <div class="img-slider">
                             <div class="slide active">
-                                <a href="https://www.instagram.com/submisiroom/" target="_blank"><img src="dist/img/submisiroom.png" alt=""></a>
+                                <a href="https://www.instagram.com/submisiroom/" target="_blank"><img
+                                        src="dist/img/submisiroom.png" alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/p/CmtfTX-PA9v/" target="_blank"><img src="dist/img/paint.jpg"
-                                        alt=""></a>
+                                <a href="https://www.instagram.com/p/CmtfTX-PA9v/" target="_blank"><img
+                                        src="dist/img/paint.jpg" alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/submisiroom/" target="_blank"><img src="dist/img/submisiig.svg"
-                                        alt=""></a>
+                                <a href="https://www.instagram.com/submisiroom/" target="_blank"><img
+                                        src="dist/img/submisiig.svg" alt=""></a>
                             </div>
                             <div class="navigation">
                                 <div class="btn active"></div>
@@ -135,15 +131,14 @@
                             bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi
                             syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi.
                             Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini
-                            aku buat atau orang lain buat bersamaku. Ini yang lebih masuk akal, siapa tahu ada mengerutkan dahi.
+                            aku buat atau orang lain buat bersamaku. Ini yang lebih masuk akal, siapa tahu ada
+                            mengerutkan dahi.
                             Akhirnya aku setuju. Jadi, ya jadi.</p>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
+    </section><section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="box w-full lg:w-2/3 mx-auto mb-8">
@@ -189,9 +184,7 @@
             </form>
         </div>
         </div>
-    </section>
-
-    <footer class="bg-[#000000] pt-10 pb-10 opacity-90">
+    </section><footer class="bg-[#000000] pt-10 pb-10 opacity-90">
         <div class="container mx-auto my-auto">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
@@ -231,9 +224,7 @@
             </div>
             <h4 class="text-xs pt-3 text-center text-zinc-50">©2022 Azkan Nawal</h4>
         </div>
-    </footer>
-
-    <div>
+    </footer><div>
         <script src="dist/js/script.js"></script>
         <script src="node_modules/tw-elements/dist/js/index.min.js"></script>
         <script>
@@ -354,5 +345,4 @@
         </script>
     </div>
 </body>
-
 </html>
