--- a/memorandom.html
+++ b/memorandom.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <title>Memorandom</title>
     <link rel="stylesheet" href="dist/memorandomout.css">
 </head>
-
 <body>
     <div class="flex flex-col min-h-screen">
         <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
@@ -39,13 +37,9 @@
                     </div>
                 </div>
             </div>
-        </header>
-
-        <div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea1">
+        </header><div class="w-full h-96 bg-no-repeat bg-cover bg-fixed bg-sea1">
             <h1 class=" text-center mt-44 text-4xl font-bold text-prim lg:text-6xl ">Memorandom</h1>
-        </div>
-
-        <div class="pt-8 pb-16 bg-zinc-50">
+        </div><div class="pt-8 pb-16 bg-zinc-50">
             <div class="container mx-auto px-7 lg:px-32 ">
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
@@ -61,9 +55,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
+        </div><footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
             <div class="container mx-auto ">
                 <div class="flex justify-center">
                     <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
@@ -103,10 +95,7 @@
                 </div>
                 <h4 class="text-xs pt-3 text-center text-zinc-50">©2022 Azkan Nawal</h4>
             </div>
-        </footer>
-
-        <script src="dist/js/script.js"></script>
+        </footer><script src="dist/js/script.js"></script>
     </div>
 </body>
-
 </html>
