--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
                         isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
                         bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pena yang
-                        sudah kuanggap jadi sahabatku ada benarnya, terimakasih pilot. Baik, itu saja basa-basinya,
+                        sudah kuanggap seperti sahabatku ada benarnya, terimakasih pilot. Baik, itu saja basa-basinya,
                         intinya selamat berkunjung. Semoga harimu menyenangkan.
                     </p>
                 </div>
