--- a/dec.html
+++ b/dec.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Alternatif</title>
     <link rel="stylesheet" href="dist/decout.css">
 </head>
+
 <body>
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
@@ -36,7 +38,8 @@
                 </div>
             </div>
         </div>
-    </header><div class="pt-24 pb-16 bg-zinc-50">
+    </header>
+    <div class="pt-24 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-72">
             <h1 class=" text-3xl font-bold lg:text-4xl text-prim">Alternatif</h1>
             <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 28, 2022 <span
@@ -67,7 +70,7 @@
                     kamera hpku sudah memilikinya.</p>
                 <img src="dist/img/happy.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
                 <p class="mt-3 leading-relaxed">Bagiku berbicara lebih sulit daripada menulis. Menulis lebih sulit
-                    daripada membaca. Membaca lebih bagus daripada main slot atau all in tim bola. Begitu isi
+                    daripada membaca. Membaca lebih bagus daripada main slot atau all in tim bola jagoan. Begitu isi
                     kepalaku penuh pikiran dan kotoran, aku ingin sekali mengeluarkannya. Kapan hari aku sempat
                     berencana untuk menjadi youtuber dan membungkus pikiranku di dalam konten video. Tapi berhubung
                     skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini. Lebih baik
@@ -83,7 +86,8 @@
                         alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
         </div>
-    </div><section id="komentar" class="pt-28 lg:pt-48 pb-16 bg-zinc-50">
+    </div>
+    <section id="komentar" class="pt-28 lg:pt-48 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="box mx-auto mb-8 lg:w-2/3">
@@ -127,7 +131,8 @@
             </form>
         </div>
         </div>
-    </section><footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
+    </section>
+    <footer class="bg-[#000000] pt-10 pb-10 opacity-90 mt-auto">
         <div class="container mx-auto ">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
