--- a/memorandom.html
+++ b/memorandom.html
@@ -43,15 +43,20 @@
             <div class="container mx-auto px-7 lg:px-32 ">
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
+                        <a href="./2023">
+                            <img src="/dist/img/2023f.svg" class="rounded shadow-md" alt="">
+                            <h3 class="text-center mt-3 text-lg font-semibold text-prim">Tahun baru</h3>
+                            <p class="text-prim text-center mt-2 text-sm ">January 1, 2023 <span
+                                    class="bg-amber-200 px-2 ml-1 rounded-full">1 min read</span></p>
+                        </a>
+                    </div>
+                    <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                         <a href="./dec">
                             <img src="/dist/img/pintu.jpg" class="rounded shadow-md" alt="">
                             <h3 class="text-center mt-3 text-lg font-semibold text-prim">Alternatif</h3>
                             <p class="text-prim text-center mt-2 text-sm ">December 28, 2022 <span
                                     class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
                         </a>
-                    </div>
-                    <div class="w-full mb-10 lg:px-4 lg:w-1/3">
-                        <img src="/dist/img/memorandomsoon.svg" class="rounded shadow-md" alt="">
                     </div>
                 </div>
             </div>
