--- a/2023.html
+++ b/2023.html
@@ -45,6 +45,7 @@
             <h4 class=" text-sm mt-2 lg:mt-4 text-prim">January 1, 2023 <span
                     class="ml-1 bg-amber-200 px-2 rounded-full text-xs">1 min read</span></h4>
             <div class="text-sec">
+                <img src="dist/img/2023f.svg" alt="" class="w-full rounded-md md:w-3/5 md:mx-auto mt-5 mb-5">
                 <img src="dist/img/2023.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
             </div>
         </div>
