--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         class="satus w-full my-auto mx-auto lg:w-11/12 lg:mx-0 hidden" />
                 </div>
                 <div class="w-full pt-12 lg:pt-0 lg:my-auto lg:w-2/3 lg:pl-16 lg:text-justify ">
-                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
+                    <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimah</h1>
                     <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Bunuhlah rasa penasaran, itu pesan
                         terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot, sayang kini telah tiada.
                         Sedih? Tentu tidak. Justru aku puas karena akhirnya aku sendiri yang menghabisinya. Aku baru
