--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi
                             syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi.
                             Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini
-                            aku buat atau orang lain buat bersamaku. Ini yang lebih masuk akal, siapa tahu ada
+                            aku buat atau orang lain buat bersamaku. Ini yang lebih masuk akal, siapa tahu ada yang
                             mengerutkan dahi.
                             Akhirnya aku setuju. Jadi, ya jadi.</p>
                     </div>
