--- a/memorandom.html
+++ b/memorandom.html
@@ -52,6 +52,14 @@
             <div class="container mx-auto px-7 lg:px-32 ">
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
+                        <a href="./jumat">
+                            <img src="/dist/img/setan.svg" class="rounded shadow-md" alt="">
+                            <h3 class="text-center mt-3 text-lg font-semibold text-prim">Setan Maljum</h3>
+                            <p class="text-prim text-center mt-2 text-sm ">February 10, 2023 <span
+                                    class="bg-amber-200 px-2 ml-1 rounded-full">3 min read</span></p>
+                        </a>
+                    </div>
+                    <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                         <a href="./2023">
                             <img src="/dist/img/2023f.svg" class="rounded shadow-md" alt="">
                             <h3 class="text-center mt-3 text-lg font-semibold text-prim">Tahun baru</h3>
