--- a/jumat.html
+++ b/jumat.html
@@ -44,10 +44,10 @@
                     class="ml-1 bg-amber-200 px-2 rounded-full text-xs">3 min read</span></h4>
             <div class="text-sec">
                 <p class="mt-6 leading-relaxed">Apa yang pertama kali diingat ketika mendengar kata -Jum’at?</p>
-                <p class="mt-3 leading-relaxed">Apakah Shalat Jum'at? Jum’at berkah? Malam Jum’at? Atau bukan dari salah satu itu? Coba komen dulu di batin</p>
+                <p class="mt-3 leading-relaxed">Apakah Shalat Jum'at? Jum’at berkah? Malam Jum’at? Atau bukan dari salah satu itu? Coba komen dulu di batin.</p>
                 <img src="dist/img/setan.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
                 <p class="mt-3 leading-relaxed">Nah, aku sendiri malah ingat hal lain. Belakangan ini kata jum’at mengingatkanku kepada pocong. Bukan pocong yang itu, tetapi liga pocong. Serius, liga pocong atau liga malam jum’at akan seru pekan depan nanti. Bayangkan saja, ada duel klub besar yang lumayan lama tak bertemu, pertandingan antara Crystal Palace cabang Catalan vs setan merah asal Kabupaten Manchester.</p>
-                <p class="mt-3 leading-relaxed">Seandainta judi tidak dilarang, aku akan pegang barca. Prediksiku mengatakan bahwa emyu akan tumbang di leg pertama ini sebab pewaris nomor 10 Messi mencetak brace kemudian cedera hingga absen 100 minggu, hehe1x.</p>
+                <p class="mt-3 leading-relaxed">Seandainya judi tidak dilarang, aku akan pegang barca. Prediksiku mengatakan bahwa emyu akan tumbang di leg pertama ini. Sebabnya tak lain dan tak bukan karena paduka pewaris nomor 10 Messi mencetak brace kemudian cedera hingga absen 100 minggu, hehe1x.</p>
                 <img src="dist/img/masjid.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
                 <p class="mt-3 leading-relaxed">Disisi lain, tak bisa dipungkiri bahwa jum’at identik dengan shalat jumat. Anehnya, aku memiliki keresahan saat menjalaninya, setidaknya ada 2 menurutku. </p>
                 <p class="mt-3 leading-relaxed">Pertama, kehadiran anak kecil. Tiada yang salah dengan kehadiran mereka, malah bagus sebenarnya. Tapi rasa kesal tak bisa ditutupi ketika melihat mereka sujud freestyle dengan kaki melayang di udara.</p>
