--- a/jumat.html
+++ b/jumat.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5ZHW0MMMQ1');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +65,7 @@
                 <p class="mt-3 leading-relaxed">Terlepas dari itu, ternyata ada sandal selain swallow warna biru yang juga cocok digunakan untuk pergi shalat jumat. Yap, tak lain dan tak bukan adalah sandal yang kujual dan produksi bersama kerabatku sendiri <a href="https://www.instagram.com/movinsolvin/" class="text-blue-500">@movinsolvin.</a> Lah, promosi? Emang, hehe2x. Tapi tunggu dulu brodi, jika selama ini kalian mencari sandal yang pas untuk wudhu dan pergi ke masjid, sandal inilah jawabannya. </p>
                 <img src="dist/img/gridr1.png" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
                 <p class="mt-3 leading-relaxed">Tak seperti kebanyakan sandal yang terbuat dari campuran pvc dan karet, sandal ini dibuat dari spons serta karet yang dilapisi dengan material kain berkualitas. Ketika digunakan setelah wudhu/mandipun air akan diserap oleh kain sehingga kaki cepat kering. Dengan begitu, sandal yang dipakai pun tak meninggalkan bekas kaki yang basah dan kakipun tak mengotori lantai di masjid. Bayangkan, tugas marbot bisa lebih ringan hanya karena para jamaah masjid memakai sandal ini.</p>
-                <p class="mt-3 leading-relaxed">Bukan hanya untuk pergi ke masjid saja, produk ini bisa menghangatkan kaki dikala sedang di rumah, contohnya ketika menonton barca vs mu nanti, jangan sampai kakimu kedinginan. Belum cukup, sandal ini juga bisa menemani kaki yang bawaanya tak betah di rumah, cocok bagi yang suka keluar ke kafe, mall, taman, kuburan dan lain-lain, asal bukan ke kaki gunung semeru. Sesuaikan saja.</p>
+                <p class="mt-3 leading-relaxed">Bukan hanya untuk pergi ke masjid saja, produk ini bisa menghangatkan kaki dikala sedang di rumah, contohnya ketika menonton barca vs mu nanti, jangan sampai kakimu kedinginan. Belum cukup, sandal ini juga bisa menemani kaki yang bawaannya tak betah di rumah, cocok bagi yang suka keluar ke kafe, mall, taman, kuburan dan lain-lain, asal bukan ke kaki gunung semeru. Sesuaikan saja.</p>
                 <a href="https://www.youtube.com/watch?v=StqioKCPqF8" target="_blank"><img src="dist/img/messi.svg"
                         alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
