--- a/jumat.html
+++ b/jumat.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-5ZHW0MMMQ1');
-</script>
+<head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5ZHW0MMMQ1');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Setan Maljum</title>
     <link href="dist/jumatout.css" rel="stylesheet">
 </head>
+
 <body>
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
-                    <a href="./" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
+                    <a href="./" class="font-bold text-lg text-prim block py-6 ">Beranda</a>
                 </div>
                 <div class="flex items-center px-7 lg:px-32">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
@@ -53,19 +54,46 @@
                     class="ml-1 bg-amber-200 px-2 rounded-full text-xs">3 min read</span></h4>
             <div class="text-sec">
                 <p class="mt-6 leading-relaxed">Apa yang pertama kali diingat ketika mendengar kata -Jum’at?</p>
-                <p class="mt-3 leading-relaxed">Apakah Shalat Jum'at? Jum’at berkah? Malam Jum’at? Atau bukan dari salah satu itu? Coba komen dulu di batin.</p>
+                <p class="mt-3 leading-relaxed">Apakah Shalat Jum'at? Jum’at berkah? Malam Jum’at? Atau bukan dari salah
+                    satu itu? Coba komen dulu di batin.</p>
                 <img src="dist/img/setan.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-                <p class="mt-3 leading-relaxed">Nah, aku sendiri malah ingat hal lain. Belakangan ini kata jum’at mengingatkanku kepada pocong. Bukan pocong yang itu, tetapi liga pocong. Serius, liga pocong atau liga malam jum’at akan seru pekan depan nanti. Bayangkan saja, ada duel klub besar yang lumayan lama tak bertemu, pertandingan antara Crystal Palace cabang Catalan vs setan merah asal Kabupaten Manchester.</p>
-                <p class="mt-3 leading-relaxed">Seandainya judi tidak dilarang, aku akan pegang barca. Prediksiku mengatakan bahwa emyu akan tumbang di leg pertama ini. Sebabnya tak lain dan tak bukan karena paduka pewaris nomor 10 Messi mencetak brace kemudian cedera hingga absen 100 minggu, hehe1x.</p>
+                <p class="mt-3 leading-relaxed">Nah, aku sendiri malah ingat hal lain. Belakangan ini kata jum’at
+                    mengingatkanku kepada pocong. Bukan pocong yang itu, tetapi liga pocong. Serius, liga pocong atau
+                    liga malam jum’at akan seru pekan depan nanti. Bayangkan saja, ada duel klub besar yang lumayan lama
+                    tak bertemu, pertandingan antara Crystal Palace cabang Catalan vs setan merah asal Kabupaten
+                    Manchester.</p>
+                <p class="mt-3 leading-relaxed">Seandainya judi tidak dilarang, aku akan pegang barca. Prediksiku
+                    mengatakan bahwa emyu akan tumbang di leg pertama ini. Sebabnya tak lain dan tak bukan karena paduka
+                    pewaris nomor 10 Messi mencetak brace kemudian cedera hingga absen 100 minggu, hehe1x.</p>
                 <img src="dist/img/masjid.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-                <p class="mt-3 leading-relaxed">Disisi lain, tak bisa dipungkiri bahwa jum’at identik dengan shalat jumat. Anehnya, aku memiliki keresahan saat menjalaninya, setidaknya ada 2 menurutku. </p>
-                <p class="mt-3 leading-relaxed">Pertama, kehadiran anak kecil. Tiada yang salah dengan kehadiran mereka, malah bagus sebenarnya. Tapi rasa kesal tak bisa ditutupi ketika melihat mereka sujud freestyle dengan kaki melayang di udara.</p>
-                <p class="mt-3 leading-relaxed">Kedua, sandal jamaah yang tak tertata. Pemandangan seperti ini sering kujumpai, belum lagi ketika sandal jamaah dalam keadaan basah, bisa banjir tuh di depan tulisan batas suci. Tapi ya gimana lagi, ini tergantung fasilitas masjid serta kesadaran masing-masing jamaah. Apakah aku termasuk yang sadar? Hanya Tuhan yang tahu.</p>
+                <p class="mt-3 leading-relaxed">Disisi lain, tak bisa dipungkiri bahwa jum’at identik dengan shalat
+                    jumat. Anehnya, aku memiliki keresahan saat menjalaninya, setidaknya ada 2 menurutku. </p>
+                <p class="mt-3 leading-relaxed">Pertama, kehadiran anak kecil. Tiada yang salah dengan kehadiran mereka,
+                    malah bagus sebenarnya. Tapi rasa kesal tak bisa ditutupi ketika melihat mereka sujud freestyle
+                    dengan kaki melayang di udara.</p>
+                <p class="mt-3 leading-relaxed">Kedua, sandal jamaah yang tak tertata. Pemandangan seperti ini sering
+                    kujumpai, belum lagi ketika sandal jamaah dalam keadaan basah, bisa banjir tuh di depan tulisan
+                    batas suci. Tapi ya gimana lagi, ini tergantung fasilitas masjid serta kesadaran masing-masing
+                    jamaah. Apakah aku termasuk yang sadar? Hanya Tuhan yang tahu.</p>
                 <img src="dist/img/malas.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-                <p class="mt-3 leading-relaxed">Terlepas dari itu, ternyata ada sandal selain swallow warna biru yang juga cocok digunakan untuk pergi shalat jumat. Yap, tak lain dan tak bukan adalah sandal yang kujual dan produksi bersama kerabatku sendiri <a href="https://www.instagram.com/movinsolvin/" class="text-blue-500">@movinsolvin.</a> Lah, promosi? Emang, hehe2x. Tapi tunggu dulu brodi, jika selama ini kalian mencari sandal yang pas untuk wudhu dan pergi ke masjid, sandal inilah jawabannya. </p>
+                <p class="mt-3 leading-relaxed">Terlepas dari itu, ternyata ada sandal selain swallow warna biru yang
+                    juga cocok digunakan untuk pergi shalat jumat. Yap, tak lain dan tak bukan adalah sandal yang kujual
+                    dan produksi bersama kerabatku sendiri <a href="https://www.instagram.com/movinsolvin/"
+                        class="text-blue-500">@movinsolvin.</a> Lah, promosi? Emang, hehe2x. Tapi tunggu dulu brodi,
+                    jika selama ini kalian mencari sandal yang pas untuk wudhu dan pergi ke masjid, sandal inilah
+                    jawabannya. </p>
                 <img src="dist/img/gridr1.png" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-                <p class="mt-3 leading-relaxed">Tak seperti kebanyakan sandal yang terbuat dari campuran pvc dan karet, sandal ini dibuat dari spons serta karet yang dilapisi dengan material kain berkualitas. Ketika digunakan setelah wudhu/mandipun air akan diserap oleh kain sehingga kaki cepat kering. Dengan begitu, sandal yang dipakai pun tak meninggalkan bekas kaki yang basah dan kakipun tak mengotori lantai di masjid. Bayangkan, tugas marbot bisa lebih ringan hanya karena para jamaah masjid memakai sandal ini.</p>
-                <p class="mt-3 leading-relaxed">Bukan hanya untuk pergi ke masjid saja, produk ini bisa menghangatkan kaki dikala sedang di rumah, contohnya ketika menonton barca vs mu nanti, jangan sampai kakimu kedinginan. Belum cukup, sandal ini juga bisa menemani kaki yang bawaannya tak betah di rumah, cocok bagi yang suka keluar ke kafe, mall, taman, kuburan dan lain-lain, asal bukan ke kaki gunung semeru. Sesuaikan saja.</p>
+                <p class="mt-3 leading-relaxed">Tak seperti kebanyakan sandal yang terbuat dari campuran pvc dan karet,
+                    sandal ini dibuat dari spons serta karet yang dilapisi dengan material kain berkualitas. Ketika
+                    digunakan setelah wudhu/mandipun air akan diserap oleh kain sehingga kaki cepat kering. Dengan
+                    begitu, sandal yang dipakai pun tak meninggalkan bekas kaki yang basah dan kakipun tak mengotori
+                    lantai di masjid. Bayangkan, tugas marbot bisa lebih ringan hanya karena para jamaah masjid memakai
+                    sandal ini.</p>
+                <p class="mt-3 leading-relaxed">Bukan hanya untuk pergi ke masjid saja, produk ini bisa menghangatkan
+                    kaki dikala sedang di rumah, contohnya ketika menonton barca vs mu nanti, jangan sampai kakimu
+                    kedinginan. Belum cukup, sandal ini juga bisa menemani kaki yang bawaannya tak betah di rumah, cocok
+                    bagi yang suka keluar ke kafe, mall, taman, kuburan dan lain-lain, asal bukan ke kaki gunung semeru.
+                    Sesuaikan saja.</p>
                 <a href="https://www.youtube.com/watch?v=StqioKCPqF8" target="_blank"><img src="dist/img/messi.svg"
                         alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
@@ -207,4 +235,5 @@
         })
     </script>
 </body>
+
 </html>
