--- a/dec.html
+++ b/dec.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-5ZHW0MMMQ1');
-</script>
+        gtag('config', 'G-5ZHW0MMMQ1');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +22,7 @@
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
-                    <a href="./" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
+                    <a href="./" class="font-bold text-lg text-prim block py-6 ">Beranda</a>
                 </div>
                 <div class="flex items-center px-7 lg:px-32">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
