--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en ">
-<head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-5ZHW0MMMQ1');
-</script>
+<head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZHW0MMMQ1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5ZHW0MMMQ1');
+    </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Azkan Nawal</title>
     <link href="dist/output.css" rel="stylesheet" />
 </head>
+
 <body>
     <header class="bg-transparent absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
@@ -45,7 +46,8 @@
                 </div>
             </div>
         </div>
-    </header><section id="home" class="pt-28 pb-16 bg-zinc-50">
+    </header>
+    <section id="home" class="pt-28 pb-16 bg-zinc-50">
         <div class="container px-7 mx-auto lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/3">
@@ -62,13 +64,14 @@
                         selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
                         isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
                         bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pena yang
-                        sudah kuanggap seperti sahabatku ada benarnya, terimakasih pilot. Baik, itu saja basa-basinya,
+                        sudah kuanggap seperti sahabatku ada benarnya, terima kasih pilot. Baik, itu saja basa-basinya,
                         intinya selamat berkunjung. Semoga harimu menyenangkan.
                     </p>
                 </div>
             </div>
         </div>
-    </section><section id="memorandom" class="pt-36 pb-16 bg-neutral-100">
+    </section>
+    <section id="memorandom" class="pt-36 pb-16 bg-neutral-100">
         <div class="container px-7 mx-auto my:auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/2">
@@ -106,7 +109,8 @@
                 </div>
             </div>
         </div>
-    </section><section id="submisi" class="pt-36 pb-16 bg-neutral-100 ">
+    </section>
+    <section id="submisi" class="pt-36 pb-16 bg-neutral-100 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-2/5">
@@ -157,7 +161,8 @@
                 </div>
             </div>
         </div>
-    </section><section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
+    </section>
+    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="box w-full lg:w-2/3 mx-auto mb-8">
@@ -203,7 +208,8 @@
             </form>
         </div>
         </div>
-    </section><footer class="bg-[#000000] pt-10 pb-10 opacity-90">
+    </section>
+    <footer class="bg-[#000000] pt-10 pb-10 opacity-90">
         <div class="container mx-auto my-auto">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
@@ -243,125 +249,125 @@
             </div>
             <h4 class="text-xs pt-3 text-center text-zinc-50">©2023 Azkan Nawal</h4>
         </div>
-    </footer><div>
-        <script src="dist/js/script.js"></script>
-        <script src="node_modules/tw-elements/dist/js/index.min.js"></script>
-        <script>
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbwMisJ72YmKCMw9SVdnWsB5s9rXC5U_6m6dD9p7ke1gF2kaosSXJ7Ax88c9xJHoA6JIAg/exec'
-            const form = document.forms['komentar'];
-            const kirim = document.querySelector('.kirim');
-            const loading = document.querySelector('.loading');
-            const alert = document.querySelector('.alert');
-            const silang = document.querySelector('.silang');
+    </footer>
+    <script src="dist/js/script.js"></script>
+    <script src="node_modules/tw-elements/dist/js/index.min.js"></script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwMisJ72YmKCMw9SVdnWsB5s9rXC5U_6m6dD9p7ke1gF2kaosSXJ7Ax88c9xJHoA6JIAg/exec'
+        const form = document.forms['komentar'];
+        const kirim = document.querySelector('.kirim');
+        const loading = document.querySelector('.loading');
+        const alert = document.querySelector('.alert');
+        const silang = document.querySelector('.silang');
 
-            kirim.addEventListener('click', function () {
-                loading.classList.toggle('invisible');
+        kirim.addEventListener('click', function () {
+            loading.classList.toggle('invisible');
+        });
+
+        kirim.addEventListener('click', function () {
+            kirim.classList.toggle('hidden');
+        });
+
+        silang.addEventListener('click', function () {
+            alert.classList.toggle('invisible');
+        });
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => {
+                    kirim.classList.toggle('hidden');
+                    loading.classList.toggle('invisible');
+                    alert.classList.remove('invisible');
+                    form.reset();
+                    console.log('Success!', response)
+                })
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
+    <script>
+        const first = document.querySelector('.satu');
+        const second = document.querySelector('.satus');
+
+        first.addEventListener('click', function () {
+            first.classList.toggle('hidden');
+            second.classList.toggle('hidden');
+        })
+
+        second.addEventListener('click', function () {
+            first.classList.toggle('hidden');
+            second.classList.toggle('hidden');
+        })
+
+    </script>
+    <script>
+        const box = document.querySelector('.box');
+        const nobox = document.querySelector('.nobox');
+
+        box.addEventListener('click', function () {
+            box.classList.toggle('hidden');
+            nobox.classList.toggle('hidden');
+        })
+
+        nobox.addEventListener('click', function () {
+            box.classList.toggle('hidden');
+            nobox.classList.toggle('hidden');
+        })
+    </script>
+    <script type="text/javascript">
+        var slides = document.querySelectorAll('.slide');
+        var btns = document.querySelectorAll('.btn');
+        let currentSlide = 1;
+
+        // Javascript for image slider manual navigation
+        var manualNav = function (manual) {
+            slides.forEach((slide) => {
+                slide.classList.remove('active');
+
+                btns.forEach((btn) => {
+                    btn.classList.remove('active');
+                });
             });
 
-            kirim.addEventListener('click', function () {
-                kirim.classList.toggle('hidden');
+            slides[manual].classList.add('active');
+            btns[manual].classList.add('active');
+        }
+
+        btns.forEach((btn, i) => {
+            btn.addEventListener("click", () => {
+                manualNav(i);
+                currentSlide = i;
             });
+        });
 
-            silang.addEventListener('click', function () {
-                alert.classList.toggle('invisible');
-            });
+        // Javascript for image slider autoplay navigation
+        var repeat = function (activeClass) {
+            let active = document.getElementsByClassName('active');
+            let i = 1;
 
-            form.addEventListener('submit', e => {
-                e.preventDefault()
-                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                    .then(response => {
-                        kirim.classList.toggle('hidden');
-                        loading.classList.toggle('invisible');
-                        alert.classList.remove('invisible');
-                        form.reset();
-                        console.log('Success!', response)
-                    })
-                    .catch(error => console.error('Error!', error.message))
-            })
-        </script>
-        <script>
-            const first = document.querySelector('.satu');
-            const second = document.querySelector('.satus');
-
-            first.addEventListener('click', function () {
-                first.classList.toggle('hidden');
-                second.classList.toggle('hidden');
-            })
-
-            second.addEventListener('click', function () {
-                first.classList.toggle('hidden');
-                second.classList.toggle('hidden');
-            })
-
-        </script>
-        <script>
-            const box = document.querySelector('.box');
-            const nobox = document.querySelector('.nobox');
-
-            box.addEventListener('click', function () {
-                box.classList.toggle('hidden');
-                nobox.classList.toggle('hidden');
-            })
-
-            nobox.addEventListener('click', function () {
-                box.classList.toggle('hidden');
-                nobox.classList.toggle('hidden');
-            })
-        </script>
-        <script type="text/javascript">
-            var slides = document.querySelectorAll('.slide');
-            var btns = document.querySelectorAll('.btn');
-            let currentSlide = 1;
-
-            // Javascript for image slider manual navigation
-            var manualNav = function (manual) {
-                slides.forEach((slide) => {
-                    slide.classList.remove('active');
-
-                    btns.forEach((btn) => {
-                        btn.classList.remove('active');
+            var repeater = () => {
+                setTimeout(function () {
+                    [...active].forEach((activeSlide) => {
+                        activeSlide.classList.remove('active');
                     });
-                });
 
-                slides[manual].classList.add('active');
-                btns[manual].classList.add('active');
+                    slides[i].classList.add('active');
+                    btns[i].classList.add('active');
+                    i++;
+
+                    if (slides.length == i) {
+                        i = 0;
+                    }
+                    if (i >= slides.length) {
+                        return;
+                    }
+                    repeater();
+                }, 7000);
             }
-
-            btns.forEach((btn, i) => {
-                btn.addEventListener("click", () => {
-                    manualNav(i);
-                    currentSlide = i;
-                });
-            });
-
-            // Javascript for image slider autoplay navigation
-            var repeat = function (activeClass) {
-                let active = document.getElementsByClassName('active');
-                let i = 1;
-
-                var repeater = () => {
-                    setTimeout(function () {
-                        [...active].forEach((activeSlide) => {
-                            activeSlide.classList.remove('active');
-                        });
-
-                        slides[i].classList.add('active');
-                        btns[i].classList.add('active');
-                        i++;
-
-                        if (slides.length == i) {
-                            i = 0;
-                        }
-                        if (i >= slides.length) {
-                            return;
-                        }
-                        repeater();
-                    }, 7000);
-                }
-                repeater();
-            }
-            repeat();
-        </script>
-    </div>
+            repeater();
+        }
+        repeat();
+    </script>
 </body>
+
 </html>
