--- a/dec.html
+++ b/dec.html
@@ -105,17 +105,19 @@
                 <div class="nobox hidden mx-auto mb-8 lg:w-2/3">
                     <h2 class=" font-bold text-prim  text-3xl lg:text-4xl">Komentar<span class="inline-block ml-2"><img
                                 src="dist/img/info.png" alt="" class="h-4"></span></h2>
-                    <p>Komentar hanya akan dikirim dan tidak akan ditampilkan disini.</p>
+                    <p>Terjebak dalam pandangan dan pikiran yang sempit adalah hal yang berbahaya. Aku tidak mau itu
+                        terjadi. Siapa tahu ada yang punya masukan atau cibiran tentang tulisan ini, itu akan sangat
+                        membantu. Silahkan langsung dikirim.</p>
                 </div>
             </div>
             <form name="komentar">
                 <div class="w-full lg:w-2/3 mx-auto">
                     <div class="w-full mb-8">
-                        <input type="text" id="name" placeholder="Nama/Anonim" name="nama"
+                        <input type="text" id="name" placeholder="Nama (opsional)" name="nama"
                             class="w-full bg-neutral-200 bg-opacity-80 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim" />
                     </div>
                     <div class="w-full mb-8">
-                        <textarea type="text" id="pesan" placeholder="Komentar" name="komentar"
+                        <textarea type="text" id="pesan" placeholder="Isi komentar" name="komentar"
                             class="w-full bg-neutral-200 bg-opacity-80 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim h-28"></textarea>
                     </div>
                     <div class="w-full">
