--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <a href="https://www.instagram.com/submisiroom/" target="_blank">
                         <h1
                             class="text-3xl text-prim block font-bold mb-4 lg:invisible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
-                            Submisi</h1>
+                            Submisiroom</h1>
                     </a>
                     <div class="ha">
                         <div class="img-slider">
@@ -127,7 +127,7 @@
                             </div>
                             <div class="slide">
                                 <a href="https://www.instagram.com/p/CmtfTX-PA9v/" target="_blank"><img
-                                        src="dist/img/paint.jpg" alt=""></a>
+                                        src="dist/img/keychain1.png" alt=""></a>
                             </div>
                             <div class="slide">
                                 <a href="https://www.instagram.com/submisiroom/" target="_blank"><img
@@ -146,7 +146,7 @@
                         <a href="https://www.instagram.com/submisiroom/" target="_blank">
                             <h2
                                 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
-                                Submisi</h2>
+                                Submisiroom</h2>
                         </a>
                         <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung
                             tempat seperti
@@ -162,54 +162,8 @@
             </div>
         </div>
     </section>
-    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
-        <div class="container mx-auto px-7 lg:px-32">
-            <div class="w-full ">
-                <div class="box w-full lg:w-2/3 mx-auto mb-8">
-                    <h2 class="font-bold text-prim  lg:text-center text-3xl lg:text-4xl">Box<span
-                            class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2>
-                </div>
-                <div class="nobox w-full lg:w-2/3 mx-auto mb-8 hidden">
-                    <h2 class="font-bold text-prim block lg:text-center text-3xl lg:text-4xl">Box<span
-                            class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2>
-                    <p>Terjebak dalam pandangan dan pikiran yang sempit adalah hal yang berbahaya. Aku tidak mau itu
-                        terjadi. Siapa tahu ada yang punya masukan atau cibiran tentang tempat ini, itu akan sangat
-                        membantu. Silahkan langsung dikirim. </p>
-                </div>
-            </div>
-            <form name="komentar">
-                <div class="w-full lg:w-2/3 mx-auto">
-                    <div class="w-full mb-8">
-                        <input type="text" id="name" placeholder="Nama/Anonim" name="nama"
-                            class="w-full bg-neutral-200 bg-opacity-80 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim" />
-                    </div>
-                    <div class="w-full mb-8">
-                        <textarea type="text" id="pesan" placeholder="Isi terserah" name="komentar"
-                            class="w-full bg-neutral-200 bg-opacity-80 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim h-28"></textarea>
-                    </div>
-                    <div class="w-full">
-                        <button type="submit"
-                            class="kirim text-base font-bold bg-neutral-200 bg-opacity-80 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 mb-3 text-sec">Kirim</button>
-                        <button type="button"
-                            class="loading font-bold bg-neutral-200 bg-opacity-80 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 invisible ">
-                            <div class="flex justify-center items-center">
-                                <div class="spinner-border animate-spin inline-block w-6 h-6 border-4 rounded-full"
-                                    role="status">
-                                </div>
-                            </div>
-                        </button>
-                    </div>
-                    <div class="alert bg-neutral-200 bg-opacity-80 rounded-full px-8 py-3 lg:py-1 font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
-                        role="alert">
-                        Sudah terkirim, terimakasih sudah berkunjung
-                        <button type="button" class="silang text-4xl ml-auto text-sec mb-2">×
-                        </button>
-                    </div>
-            </form>
-        </div>
-        </div>
-    </section>
-    <footer class="bg-[#000000] pt-10 pb-10 opacity-90">
+    
+    <footer class="bg-[#000000] pt-10 pb-10 mt-48 opacity-90">
         <div class="container mx-auto my-auto">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
