--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             </li>
                             <li class="group">
                                 <a href="https://www.instagram.com/submisiroom/" target="_blank"
-                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
+                                    class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisiroom</a>
                             </li>
                         </ul>
                     </nav>
@@ -81,9 +81,9 @@
                             Memorandom</h1>
                     </a>
                     <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan kaya makna dan
-                        inspirasi sudah dipastikan ada di blog lain, bukan disini. Disini hanyalah gudang ketikan anak
-                        kemarin sore. Tapi jika memang tertarik, membaca tulisan disini tak ada salahnya. Pasti akan ada
-                        banyak hal yang baru disadari setelah baca tulisan disini, salah satunya buang-buang
+                        inspirasi sudah dipastikan ada di blog lain, bukan di sini. Disini hanyalah gudang ketikan anak
+                        kemarin sore. Tapi jika memang tertarik, membaca tulisan di sini tak ada salahnya. Pasti akan ada
+                        banyak hal yang baru disadari setelah baca tulisan di sini, salah satunya buang-buang
                         waktu. Menariknya, semua tulisan dibuat dengan rasa gelisah meski nyatanya sedang gembira.
                         Saking gembiranya, alhasil semua tulisan lahir dengan bebas tanpa peduli aturan penulisan yang
                         berlaku. Ingat dan jangan salah, ini Memorandom, bukan Memorandum.
@@ -110,7 +110,7 @@
             </div>
         </div>
     </section>
-    <section id="submisi" class="pt-36 pb-16 bg-neutral-100 ">
+    <section id="submisi" class="pt-36 pb-48 bg-neutral-100 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-2/5">
@@ -163,7 +163,7 @@
         </div>
     </section>
     
-    <footer class="bg-[#000000] pt-10 pb-10 mt-48 opacity-90">
+    <footer class="bg-[#000000] pt-10 pb-10 opacity-90">
         <div class="container mx-auto my-auto">
             <div class="flex justify-center">
                 <a href="https://www.instagram.com/azkannawal/" target="_blank" class="mr-3 text-zinc-50">
