--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     </a>
                     <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan kaya makna dan
                         inspirasi sudah dipastikan ada di blog lain, bukan di sini. Disini hanyalah gudang ketikan anak
-                        kemarin sore. Tapi jika memang tertarik, membaca tulisan di sini tak ada salahnya. Pasti akan ada
+                        kemarin sore. Tapi jika memang tertarik, membaca tulisan di sini tak ada salahnya. Pasti akan
+                        ada
                         banyak hal yang baru disadari setelah baca tulisan di sini, salah satunya buang-buang
                         waktu. Menariknya, semua tulisan dibuat dengan rasa gelisah meski nyatanya sedang gembira.
                         Saking gembiranya, alhasil semua tulisan lahir dengan bebas tanpa peduli aturan penulisan yang
@@ -162,8 +163,6 @@
             </div>
         </div>
     </section>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5PdgIAHzwDvTZRjIGSQGtN?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    
     <footer class="bg-[#000000] pt-10 pb-10 opacity-90">
         <div class="container mx-auto my-auto">
             <div class="flex justify-center">
